Replace .gitignore entries with placeholder
Remove specific ignores for the .kiro workspace and research files (.kiro/, .kiro/Reaserch.md, .kiro/specs/*/Research.md) and replace the file content with placeholder comment lines. The change leaves no active ignore patterns and the file currently has no trailing newline.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Kiro research notes
-.kiro/Reaserch.md
-# Kiro workspace
-.kiro/
-# Kiro research notes
-.kiro/specs/*/Research.md
+#just delete it
+#--------------
+#why put here
